Test-Model/force-app/main/default/objects/VisualforceSave__c/VisualforceSave__c.object-meta.xml
<CustomObject>
    <label>Visualforceフォーム回答</label>
    <nameField>
        <label>Visualforceフォーム回答名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>