Test-Model/force-app/main/default/objects/VisualforceSave__c/fields/AnswerIntegrated__c.field-meta.xml
<CustomField>
    <fullName>AnswerIntegrated__c</fullName>
    <label>回答統合エリア</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>