Test-Model/force-app/main/default/objects/VisualforceSave__c/fields/RequirementName__c.field-meta.xml
<CustomField>
    <fullName>RequirementName__c</fullName>
    <label>要件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>