Test-Model/force-app/main/default/objects/VisualforceSave__c/fields/ResponseMailAddress__c.field-meta.xml
<CustomField>
    <fullName>ResponseMailAddress__c</fullName>
    <label>返信先メールアドレス</label>
    <type>Email</type>
</CustomField>