Test-Model/force-app/main/default/objects/VisualforceSave__c/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <label>実施予定日</label>
    <type>Date</type>
</CustomField>