Test-Model/force-app/main/default/objects/VisualforceSave__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RequirementName__c</columns>
    <columns>ResponseMailAddress__c</columns>
    <columns>ScheduledDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>